--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <img src="ready.png" class="harvest-icon"> Урожай: <span id="harvestCount">x0</span>
             </p>
         </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
